--- a/src/main/resources/commands.properties
+++ b/src/main/resources/commands.properties
@@ -1,4 +1,4 @@
-readtempds = TempDS.ReadTempDS
+readtempds = TempDS.TempDSReader
 listtds = Enrichment.ListTDS
 writetds = Enrichment.WriteTDS
 readtds = Enrichment.ReadTDS
