--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -3,7 +3,7 @@ log4j.rootLogger=INFO, file, stdout
 
 #Redirect to custom log folder
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=D:\\log.log
+log4j.appender.file.File=/home/mike/log.log
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
